--- a/MySolitaire/app/src/main/res/values/strings.xml
+++ b/MySolitaire/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_play_klondike">PlayKlondikeActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="play_klondike">Play Klondike</string>
 </resources>
