--- a/MySolitaire/app/src/main/res/values/strings.xml
+++ b/MySolitaire/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="play_klondike">Play Klondike</string>
+    <string name="card_fragment_contentDescription">suit</string>
 </resources>
