A little more design on the game.

--- a/MySolitaire/app/src/main/res/values/strings.xml
+++ b/MySolitaire/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="card_fragment_contentDescription">suit</string>
     <string name="cards_remaining_label"># Cards Remaining:</string>
     <string name="new_deal">New Deal</string>
+    <string name="empty">(Empty)</string>
 </resources>
